update all notebooks

--- a/notebooks_raw/02_object_oriented.ipynb
+++ b/notebooks_raw/02_object_oriented.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:239545ba150d2436bc1a40c495b9e00f2cdf4659e48b929de7318d28ecea5b59"
+  "signature": "sha256:5ca1b53fdbe61c36acee76e2220060846da1cf972806d0be0ecfc1238cc43bf6"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -26,7 +26,9 @@
       "in most data visualization scenarios.\n",
       "\n",
       "As part of this discussion, we will discuss generating multi-panel plots using\n",
-      "the ``subplot`` and ``subplots`` commands\n",
+      "the ``subplot`` and ``subplots`` commands.\n",
+      "\n",
+      "A very helpful tutorial is the [Artist tutorial](http://matplotlib.org/users/artists.html). The [Axes](http://matplotlib.org/api/axes_api.html) and [lines](http://matplotlib.org/api/lines_api.html) references then become quite useful.\n",
       "\n",
       "As before, we'll start by entering matplotlib inline mode:"
      ]
