--- a/notebooks_raw/06_animations.ipynb
+++ b/notebooks_raw/06_animations.ipynb
@@ -1,6 +1,7 @@
 {
  "metadata": {
-  "name": "06_animations"
+  "name": "",
+  "signature": "sha256:73c315b48cbe7e1b9f9c021dc3111c4ce3737d0831025d019d36edc352e4d524"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -28,17 +29,23 @@
       "\n",
       "Here we'll just create a basic example of an animated sine wave.\n",
       "\n",
-      "Here it's vital that we **don't** use pylab inline mode, because the inline\n",
-      "figures are static."
+      "Here it's vital that we **don't** use matplotlib inline mode, because the inline\n",
+      "figures are static.\n",
+      "\n",
+      "A summary of which backends work with animations can be found [here](http://nbviewer.ipython.org/github/gregnordin/PythonShare/blob/master/matplotlib/matplotlib_backends_summary.ipynb). Another example notebook that shows how to use ``FuncAnimation`` can be found [here](https://github.com/gregnordin/ECEn360_W15/blob/master/notebooks/01c_standingwaves.ipynb)"
      ]
     },
     {
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "%pylab\n",
+      "import numpy as np\n",
+      "from matplotlib import pyplot as plt\n",
+      "from matplotlib import animation\n",
       "\n",
-      "from matplotlib import animation"
+      "# Switch to a backend that supports FuncAnimation\n",
+      "plt.switch_backend('qt4agg')\n",
+      "print 'Matplotlib graphics backend in use:',plt.get_backend()"
      ],
      "language": "python",
      "metadata": {},
@@ -47,13 +54,11 @@
        "output_type": "stream",
        "stream": "stdout",
        "text": [
-        "\n",
-        "Welcome to pylab, a matplotlib-based Python environment [backend: TkAgg].\n",
-        "For more information, type 'help(pylab)'.\n"
+        "Matplotlib graphics backend in use: Qt4Agg\n"
        ]
       }
      ],
-     "prompt_number": 1
+     "prompt_number": 3
     },
     {
      "cell_type": "markdown",
@@ -100,12 +105,14 @@
       "# the video can be embedded in html5.  You may need to adjust this for\n",
       "# your system: for more information, see\n",
       "# http://matplotlib.sourceforge.net/api/animation_api.html\n",
-      "#anim.save('basic_animation.mp4', fps=30, codec='libx264')"
+      "#anim.save('basic_animation.mp4', fps=30, codec='libx264')\n",
+      "\n",
+      "plt.show()"
      ],
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 2
+     "prompt_number": 4
     },
     {
      "cell_type": "markdown",
